--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -1,18 +1,45 @@
 name: issue-comment-workflow
-on: issue-comment
+on: issue_comment
   
 jobs: 
   pr-comment:
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps: 
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    
+    - name: Print specific PR information
+      run: |
+        echo "Comment author: ${{ github.event.comment.user.login }}"
+        echo "Comment body: ${{ github.event.comment.body }}"
+        echo "PR number: ${{ github.event.issue.number }}"
+        echo "Repository: ${{ github.repository }}"
+
     - name: pr comment
       run: echo ${{ github.event.issue.pull_request }}
+      
 
   issue-comment:
-    if: ${{ github.event.issue.pull_request }}
+    if: ${{ !github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps: 
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    
+    - name: Print specific issue information
+      run: |
+        echo "Comment author: ${{ github.event.comment.user.login }}"
+        echo "Comment body: ${{ github.event.comment.body }}"
+        echo "Issue number: ${{ github.event.issue.number }}"
+        echo "Issue title: ${{ github.event.issue.title }}"
+        echo "Issue author: ${{ github.event.issue.user.login }}"
+        echo "Repository: ${{ github.repository }}"
+
     - name: issue comment
       run: echo ${{ github.event.issue.pull_request }}
       
